added test methods, pending adding java docs and optimize code